2005-07-14  Guilhem Lavaux  <guilhem@kaffe.org>

	* java/util/logging/Logger.java
	(resetLogger): Remove all handlers from the handler list.

	* java/util/logging/LogManager.java
	(reset): Call resetLogger() too.
	(readConfiguration): Call reset().

2005-07-14  Mark Wielaard  <mark@klomp.org>

	* examples/gnu/classpath/examples/awt/Demo.java
	(TestWindow.parent): Make package private.
	* gnu/java/net/protocol/http/HTTPURLConnection.java
	(proxyHostname, proxyPort, agent, keepAlive, maxConnections):
	Likewise.
	* java/text/SimpleDateFormat.java (field, size): Likewise.
	* java/util/jar/JarFile.java (readSignatures): Likewise.
	* java/util/logging/FileHandler.java (written): Likewise.
	* javax/swing/plaf/basic/BasicFileChooserUI.java: Make shared
	fields package private.
	(closeDialog): Make package private.
	(filterEntries): Likewise.
	* javax/swing/plaf/basic/BasicPopupMenuUI.java
	(mouseInputListener): Likewise.
	* javax/swing/plaf/basic/BasicTreeUI.java
	(getNextVisibleNode, getPreviousVisibleNode, selectPath): Likewise.
	* javax/swing/text/JTextComponent.java (caret, editable): Likewise.
	
2005-07-14  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/AbstractButton.java: Minor doc fixes.
	(getActionCommand): Access field directly.
	(setActionCommand): Dito.
	(fireActionPerformed): Copy ActionEvent instance instead
	of reusing it.

2005-07-13  Roman Kennke  <roman@kennke.org>

	* javax/swing/BoundedRangeModel.java:
	Added/Fixed interface API documentation.
	* javax/swing/ButtonModel.java:
	Added/Fixed interface API documentation.
	* javax/swing/CellEditor.java:
	Added/Fixed interface API documentation.
	* javax/swing/ComboBoxEditor.java:
	Added/Fixed interface API documentation.
	* javax/swing/ComboBoxModel.java:
	Added/Fixed interface API documentation.
	* javax/swing/Icon.java:
	Added/Fixed interface API documentation.
	* javax/swing/JComboBox.java
	(KeySelectionManager): Added/Fixed interface API documentation.
	* javax/swing/ListCellRenderer.java: